--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-	"name": "galileo-minecraft-bot",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"deploy": "wrangler deploy",
-		"dev": "wrangler dev",
-		"start": "wrangler dev",
-		"test": "vitest",
-		"cf-typegen": "wrangler types"
-	},
-	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.4.5",
-		"@types/node": "^24.3.1",
-		"typescript": "^5.5.2",
-		"vitest": "1.5.0",
-		"wrangler": "^4.34.0"
-	}
+  "name": "galileo-minecraft-bot",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "gen": "wrangler types",
+    "deploy": "wrangler deploy"
+  },
+  "devDependencies": {
+    "@cloudflare/vitest-pool-workers": "^0.4.5",
+    "@types/node": "^24.9.1",
+    "typescript": "^5.9.3",
+    "vitest": "1.5.0",
+    "wrangler": "^4.45.0"
+  }
 }
