--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,14 +16,14 @@
     "resolveJsonModule": true,
     "noEmit": true,
     "isolatedModules": true,
-    "allowSyntheticDefaultImports": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": [
     "test"
   ],
   "include": [
     "worker-configuration.d.ts",
-    "src/**/*.ts",
-    "src/**/*.d.ts"
+    "lib/telegram/types/**/*.d.ts",
+    "src/**/*.ts"
   ]
 }
